---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ????
  Features:
    - Added the ability to "pin" the GUI to the screen, so it can exist alongside other windows
    - Added the ability to "favorite" an object for easy access later
    - Added browse-able search history, keeping track of the last 20 searches
  Changes:
    - Completely rewrote the mod from scratch to improve code quality, efficiency, and structure
    - Search and information are now combined into one window
    - Information listboxes are significantly wider and are arranged in a single column
    - Remote Interface:
      - The remote interface has received significant changes, refer to the documentation for more information
  Bugfixes:
    - Fixed several crashes related to GUI buttons and multiplayer latency

---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2020-06-19
  Features:
    - Added /RecipeBook command for diagnosing / fixing issues, use /help RecipeBook to see possible options
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2020-06-11
  Bugfixes:
    - Fixed a crash when re-joining a multiplayer game for the second time after a mod configuration change
    - Fixed that loading certain scenarios would cause translations to be duplicated
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2020-05-31
  Changes:
    - Deep Storage Unit (DSU) recipes are now hidden from the Recipe Book
    - The log is no longer spammed with recipe book data unless the debug adapter is hooked
  Bugfixes:
    - Fixed a crash when two players were searching at the same time
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2020-05-26
  Bugfixes: